# FractureRB

./: CMakeLists.txt  README.md
hyena/: CMakeLists.txt  readme.txt
hyena/mod/: crackBCSetter.hpp  crackBCSetter.tpl  innerevaluation.hpp  innerintegrator3d.hpp
hyena/wrap/: HyENAWrapper.cpp  HyENAWrapper.h  HyENAWrapperImpl.h  QuadratureWrapper.cpp  QuadratureWrapper.h
src/: BulletWrapper.cpp  BulletWrapper.h  ColliderData.cpp  ColliderData.h  FractureBEM.cpp  FractureBEM.h  FractureModel.cpp  FractureModel.h  FractureRB.cpp  FractureRB.h  FractureRB_config.h  FractureRB_fragments.cpp  MaterialModel.cpp  MaterialModel.h  MaterialModelImpl.h  PostProcessor.cpp  PostProcessor.h  Reader.cpp  Reader.h  Reader_VCG.cpp  SubsampledCrackTip.cpp  SubsampledCrackTip.h  VDBLoader.cpp  VDBLoader.h  VDBWrapper.cpp  VDBWrapper.h  VDBWrapper_mesh.cpp  distPtToTri.h  main.cpp  mainFractureBEM.cpp  mainSegment.cpp  mainVis.cpp  mainVisFractureBEM.cpp  mySegment.h  types.h  vcgHelper.h
vcg/complex/: complex.h
vcg/complex/algorithms/: harmonic.h  inertia.h
vcg/complex/algorithms/create/: extended_marching_cubes.h
vcg/complex/algorithms/parametrization/: poisson_solver.h
vcg/complex/algorithms/update/: curvature.h  curvature_fitting.h  fitmaps.h
vcg/math/: eigen.h  polar_decomposition.h
vcg/space/: fitting3.h  point_matching.h
vcg/wrap/io_trimesh/: export_obj.h  export_off.h  export_stl.h  import.h  import_obj.h  import_off.h  import_ply.h  import_stl.h  import_vmi.h  io_mask.h  io_ply.h
